--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
 .App {
     text-align: center;
-}
-
-.App-logo {
+  }
+  
+  .App-logo {
     height: 40vmin;
     pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
     .App-logo {
-        animation: App-logo-spin infinite 20s linear;
+      animation: App-logo-spin infinite 20s linear;
     }
-}
-
-.App-header {
+  }
+  
+  .App-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -22,38 +22,42 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
-}
-
-.App-link {
+  }
+  
+  .App-link {
     color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+  }
+  
+  @keyframes App-logo-spin {
     from {
-        transform: rotate(0deg);
+      transform: rotate(0deg);
     }
     to {
-        transform: rotate(360deg);
+      transform: rotate(360deg);
     }
-}
-
-.meme img {
-    height: 350px;
-    
-}
-
-.meme .span01 {
-    font-size: 38px;
-    color: yellow;
-    text-shadow: 0 0 2px rgb(0, 0, 0);
-    
-    
-}
-
-.meme .span02 {
-    font-size: 38px;
-    color: red;
-    text-shadow: 0 0 2px rgb(0, 0, 0);
-   
-    
-}
+  }
+  
+  
+  .meme span {
+    position: absolute;
+      width: 100%;
+      left: 0px;
+      margin-top: 290px;
+      font-size: 38px;
+      color: white;
+      /* text-shadow: 0 0 10px #000; */
+      text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 rgb(255 250 250), 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+  }
+  
+  .meme span:nth-child(1)  {
+    margin-top: 50px;
+  }
+  
+  .meme img {
+    width: 40%;
+    object-fit: scale-down;
+  }
+  
+  body, .meme {
+    background: black;
+  }
